Update employee & roomtype

--- a/app/assets/stylesheets/employees.scss
+++ b/app/assets/stylesheets/employees.scss
@@ -31,3 +31,13 @@
     }
 }
 
+.field_with_errors{
+    input {
+        width: 100%;
+        border: solid 2px red;
+    }
+    
+}
+.error_explanation{
+    background-color: red;
+}
