Changing from is_female to gender field in employee crud views

--- a/app/views/employees/index.html.erb
+++ b/app/views/employees/index.html.erb
@@ -71,7 +71,7 @@
       <td><%= employee.name %></td>
       <td><%= employee.employee_type %></td>
       <td><%= employee.citizen_id %></td>
-      <td><%= employee.is_female %></td>
+      <td><%= employee.gender %></td>
       <td><%= employee.nationality %></td>
       <td><%= employee.date_of_birth.strftime("%m/%d/%Y")  %></td>
       <td><%= employee.email %></td>
