--- a/app/views/employees/show.html.erb
+++ b/app/views/employees/show.html.erb
@@ -23,7 +23,7 @@
 <p class="tRow">
   <strong class="show_employee_name">Gender</strong>
   <strong class="show_sign">:</strong>
-  <%= @employee.is_female %>
+  <%= @employee.gender %>
 </p>
 
 <p class="tRow">
