--- a/app/views/employees/_form.html.erb
+++ b/app/views/employees/_form.html.erb
@@ -63,7 +63,7 @@
       <%= form.label :Gender %>
     </div>
     <div class="">
-      <%= form.select :is_female, ['Male', 'Female', 'Other'] %>
+      <%= form.select :gender, ['Male', 'Female', 'Other'] %>
     </div>
   </div>
   
