Adding link quick reserve button

--- a/app/assets/stylesheets/room_diagram.scss
+++ b/app/assets/stylesheets/room_diagram.scss
@@ -152,6 +152,10 @@ body {
 .room-wrapper .card .card-body .order-btn {
   justify-content: space-between;
 }
+
+.room-wrapper .card .card-body .order-btn .btn a {
+  color: white !important;
+}
 .active-reservation .fa {
   margin-top: 10px;
 }
