Responsive search bar

--- a/app/views/room_diagram/index.html.erb
+++ b/app/views/room_diagram/index.html.erb
@@ -80,7 +80,7 @@
           </ol>
         </div>
       </div>
-      <div class="col-sm-6 d-flex justify-content-end">
+      <div class="col-sm-6 searchbar">
         <div id="search" class="d-flex">
           <div class="has-search">
             <div class="dropdown">
