--- a/app/assets/stylesheets/room_diagram.scss
+++ b/app/assets/stylesheets/room_diagram.scss
@@ -69,6 +69,10 @@ body {
 }
 @media (min-width: 576px)
 {
+  .searchbar {
+    display: flex!important;
+    justify-content: flex-end!important;
+  }
   .has-search {
     position: relative;
     display: inline-flex;
