Changing is_female to gender in Client

--- a/app/views/clients/_form.html.erb
+++ b/app/views/clients/_form.html.erb
@@ -22,8 +22,8 @@
   </div>
 
   <div class="field">
-    <%= form.label :is_female %>
-    <%= form.check_box :is_female %>
+    <%= form.label :gender %>
+    <%= form.check_box :gender %>
   </div>
 
   <div class="field">
