--- a/app/views/clients/index.html.erb
+++ b/app/views/clients/index.html.erb
@@ -5,7 +5,7 @@
     <tr>
       <th>Name</th>
       <th>Citizen</th>
-      <th>Is female</th>
+      <th>Gender</th>
       <th>Nationality</th>
       <th>Date of birth</th>
       <th>Email</th>
@@ -19,7 +19,7 @@
       <tr>
         <td><%= client.name %></td>
         <td><%= client.citizen_id %></td>
-        <td><%= client.is_female %></td>
+        <td><%= client.gender %></td>
         <td><%= client.nationality %></td>
         <td><%= client.date_of_birth %></td>
         <td><%= client.email %></td>
