--- a/app/views/clients/show.html.erb
+++ b/app/views/clients/show.html.erb
@@ -9,8 +9,8 @@
 </p>
 
 <p>
-  <strong>Is female:</strong>
-  <%= @client.is_female %>
+  <strong>Gender:</strong>
+  <%= @client.gender %>
 </p>
 
 <p>
