Revert "Adding bootstrap by yarn"
This reverts commit a6ac6f6070b62bc51f7623b07897457a07f689ca.

--- a/app/views/room_diagram/_quick_reserve_room.html.erb
+++ b/app/views/room_diagram/_quick_reserve_room.html.erb
@@ -66,8 +66,7 @@
         <div class="d-flex justify-content-end">
           <p class="col-3">Ngày đi</p>
           <div class="col-7 form-group">
-            <%#= form.text_field :leave_date, data: {behavior: "flatpickr"} %>
-            <%#= form.datetime_select :leave_date, class:"form-control" %>
+            <%= form.datetime_select :leave_date, class:"form-control" %>
             <small id="emailHelp" class="form-text text-muted">Email helpers</small>
           </div>
         </div>
