--- a/app/views/room_diagram/_quick_reserve_room.html.erb
+++ b/app/views/room_diagram/_quick_reserve_room.html.erb
@@ -66,7 +66,13 @@
         <div class="d-flex justify-content-end">
           <p class="col-3">Ngày đi</p>
           <div class="col-7 form-group">
-            <%= form.datetime_select :leave_date, class:"form-control" %>
+            <%= form.text_field :leave_date,
+                             data: {
+                               controller: "flatpickr",
+                               flatpickr_date_format: "Y-m-d",
+                               flatpickr_min_date: Time.zone.now
+                             } %>
+            <%#= form.datetime_select :leave_date, class:"form-control" %>
             <small id="emailHelp" class="form-text text-muted">Email helpers</small>
           </div>
         </div>
