Styling arrival_date and leave_date

--- a/app/assets/stylesheets/room_diagram.scss
+++ b/app/assets/stylesheets/room_diagram.scss
@@ -99,6 +99,7 @@ body {
 }
 
 
+
 .has-search .dropdown {
   background-color: white;
 }
@@ -269,3 +270,7 @@ body {
   margin-left: 15px;
 }
 //#quickResModal .modal-dialog .modal-content .modal-body .table tbody tr td {}
+
+.datepicker {
+  background-color: white !important;
+}
