--- a/app/assets/stylesheets/room_diagram.scss
+++ b/app/assets/stylesheets/room_diagram.scss
@@ -271,6 +271,6 @@ body {
 }
 //#quickResModal .modal-dialog .modal-content .modal-body .table tbody tr td {}
 
-.datepicker {
+.read-only-white {
   background-color: white !important;
 }
