Adding hyperlink for room_prices

--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -36,7 +36,7 @@
           <%= link_to 'Loại phòng', room_types_path %>
         </li>
         <li>
-          <%= link_to 'Giá phòng', root_path %>
+          <%= link_to 'Giá phòng', room_prices_path %>
         </li>
         <li>
           <%= link_to 'Dịch vụ', services_path %>
